--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>RADIUS</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>רמה</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>גיל</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>יום הולדת</value>
+  </data>
 </root>
