--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Radíus</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Stig:</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Aldur</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Fæðingardagur</value>
+  </data>
 </root>
