--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Радиус</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Уровень</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Возраст</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>День рождения</value>
+  </data>
 </root>
