--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Radie</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Nivå</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Ålder</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Födelsedag</value>
+  </data>
 </root>
