--- a/Installer_Src/Setup DreamWorld/My Project/Resources.da.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.da.resx
@@ -3042,4 +3042,16 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Radius</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Niveau</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Alder</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Fødselsdag</value>
+  </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Vent til Robust starter helt op. Dette kan tage nogle minutter.</value>
+  </data>
 </root>
