--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Radio</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Nivel</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Edad</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Cumpleaños</value>
+  </data>
 </root>
