--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>شعاع</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>سطح:</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>سن</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>تاریخ تولد</value>
+  </data>
 </root>
