--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Ga</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Leibhéal</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Aois</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Breithlá</value>
+  </data>
 </root>
