--- a/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Radius</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Niveau</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Leeftijd</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Verjaardag</value>
+  </data>
 </root>
