--- a/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Radius</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Nivå</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Alder</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Fødselsdag</value>
+  </data>
 </root>
