--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>RADIUS</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Poziom</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Wiek</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Urodziny</value>
+  </data>
 </root>
