--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Raio</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Nível:</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Idade</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Aniversário</value>
+  </data>
 </root>
