--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -3042,4 +3042,13 @@
   <data name="Radius_Word" xml:space="preserve">
     <value>Yarıçap</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Düzey</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Yaş</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Doğum Günü</value>
+  </data>
 </root>
