Region Estates set when bulk loading all free regions.

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3584,4 +3584,7 @@
   <data name="PleaseWait" xml:space="preserve">
     <value>Please wait for Robust to completely boot. This may take some minutes.</value>
   </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Owner Name</value>
+  </data>
 </root>
